# sqlalchemy-adbc

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/sqlalchemy_adbc/: __init__.py  base.py  bigquery.py  flightsql.py  postgresql.py  postgresql_types.py  reflection.py  snowflake.py  sqlite.py
tests/: test_alembic_autogenerate.py  test_base.py  test_bigquery_url.py  test_flightsql_url.py  test_postgresql_types.py  test_postgresql_url.py  test_reflection.py  test_snowflake_url.py  test_sqlite.py
